tests/paczka2/big_fuzzy/27530668.err
Error in line 6: 1rduY5onxOB S468 91,7
Error in line 17: gGZvhli S961 96,9
Error in line 25: lJrX4v S961 74,9
Error in line 30: lJrX4v S468 24,8
Error in line 33: s9G S961 86,6
Error in line 50: 1rduY5onxOB A321 11,4
Error in line 41: s9G A114 26,3
Error in line 59: lJrX4v A114 55,4
Error in line 65: A114 S961 14,30
Error in line 61: lJrX4v A321 99,9
Error in line 66: XgNOyGTK8V7 S961 62,0
Error in line 73: XgNOyGTK8V7 A321 88,5
Error in line 60: gGZvhli S961 47,8
Error in line 86: XZNCW S468 253,8
Error in line 80: s9G S468 39,2
Error in line 77: XgNOyGTK8V7 S961 29,0
Error in line 92: XgNOyGTK8V7 A321 80,7
Error in line 58: A114 S961 29,1
Error in line 87: XZNCW A114 58,1
Error in line 104: XgNOyGTK8V7 S468 44,6
Error in line 105: XgNOyGTK8V7 A114 58,4
Error in line 109: XgNOyGTK8V7 S961 6,7
Error in line 101: XZNCW S961 72,2
Error in line 107: 1rduY5onxOB S961 4,0
Error in line 114: 1rduY5onxOB A321 15,9
Error in line 122: XgNOyGTK8V7 A321 71,0
Error in line 135: XZNCW S961 11,6
Error in line 145: XgNOyGTK8V7 S468 58,2
Error in line 154: XgNOyGTK8V7 A321 -5,5
Error in line 160: 1rduY5onxOB S468 87,5
Error in line 151: XgNOyGTK8V7 A321 89,2
Error in line 165: XgNOyGTK8V7 S468 96,9
Error in line 162: A114 S468 10,3
Error in line 168: lJrX4v S961 72,6
Error in line 186: lJrX4v S468 53,4
Error in line 184: XgNOyGTK8V7 A114 60,6
Error in line 191: gGZvhli S961 66,2
Error in line 195: s9G A114 95,7
Error in line 205: A114 S961 66,6
Error in line 211: A114 A321 93,6
Error in line 210: s9G S961 59,1
Error in line 225: gGZvhli A114 38,5
Error in line 230: gGZvhli S961 44,1
Error in line 226: XZNCW S961 68,0
Error in line 235: gGZvhli A114 15,5
Error in line 237: XZNCW A114 60,0
Error in line 239: XZNCW S961 66,8
